--- a/Student_03/html/quiz.html
+++ b/Student_03/html/quiz.html
@@ -9,14 +9,14 @@
     <!-- This links to an external style sheet for the navigation bar -->
     <link rel="stylesheet" href="../css/navbar.css" />
     <!-- This links to an external script file for the Quiz page -->
-    <script src="../Javascript/quiz.js"></script>
+    <script src="../javascript/quiz.js"></script>
   </head>
   <body>
     <!-- Header -->
     <header>
        <!-- NavBar -->
     <nav>
-      <img src="../images/football.png" alt="alter" />
+      <img src="../Images/football.png" alt="alter" />
       <div id="logoHeading">
         <p>Football Trivia</p>
       </div>
