--- a/Student_01/html/content-page-zaid.html
+++ b/Student_01/html/content-page-zaid.html
@@ -12,7 +12,7 @@
     <section>
         <header>
             <nav>
-                <img src="../images/football.png" alt="alter" />
+                <img src="../Images/football.png" alt="alter" />
                 <div id="logoHeading">
                   <p>Football Trivia</p>
                 </div>
@@ -90,7 +90,7 @@
         <div class="content-inner">
             <!-- 1 -->
              <div class="description-item">
-                <img class="inimg" src="..//images/europe2.jpg" alt="jsut">
+                <img class="inimg" src="../Images/europe2.jpg" alt="jsut">
                 <div class="video-description">
                     <h3>Europe</h3>
                     <p>Football fan culture in Europe is vibrant and ever-changing. 
@@ -100,7 +100,7 @@
             </div>
             <!-- 2 -->
             <div class="description-item">
-                <img class="inimg" src="..//images/africa1.jpg" alt="jsut">
+                <img class="inimg" src="../Images/africa1.jpg" alt="jsut">
                 <div class="video-description">
                     <h3>Africa</h3>
                     <p>Football is a cultural phenomenon in Africa, and fan culture is a big part of that.
@@ -111,7 +111,7 @@
             </div>
             <!-- 3 -->
             <div class="description-item">
-                <img class="inimg" src="..//images/qatar.jpg" alt="jsut">
+                <img class="inimg" src="../Images/qatar.jpg" alt="jsut">
                 <div class="video-description">
                     <h3>Middle east</h3>
                     <p>  Football is the most popular sport in the Middle East, 
@@ -123,7 +123,7 @@
             </div>
             <!-- 4 -->
             <div class="description-item">
-                <img class="inimg" src="..//images/argentina.jpg" alt="jsut">
+                <img class="inimg" src="../Images/argentina.jpg" alt="jsut">
                 <div class="video-description">
                     <h3>South America</h3>
                     <p>Football fans in South America are some of the most passionate fans in the world. They travel to away games,
@@ -148,8 +148,8 @@
                     Football fan culture in Europe is a unique and special part of the game. It is a way for fans to express their passion for the sport and to connect with other fans from all over the continent.
                 </p>
                 <div class="images">
-                    <img src="../images/real.webp" alt="beachsurf1">
-                    <img src="../images/liverpool.jpeg" alt="beachsurf2">
+                    <img src="../Images/real.webp" alt="beachsurf1">
+                    <img src="../Images/liverpool.jpeg" alt="beachsurf2">
                    
                 </div>
             </div>
@@ -176,8 +176,8 @@
 
                 </p>
                 <div class="images">
-                    <img class="seimg" src ="..//images/african2.jpeg" alt="mountainclimb1">
-                    <img src="..//images/african3.jpg" alt="mountainclimb2">
+                    <img class="seimg" src ="../Images/african2.jpeg" alt="mountainclimb1">
+                    <img src="../Images/african3.jpg" alt="mountainclimb2">
                     <!-- <img src="..\assets\mountainclimb3.jpg" alt="mountainclimb3"> -->
                 </div>
             </div>
@@ -201,8 +201,8 @@
                      
                 </p>
                 <div class="images">
-                    <img src="../images/qatar1.webp" alt="mountaincycling1">
-                    <img src="..//images/saudi-arabia.webp" alt="mountaincycling2">
+                    <img src="../Images/qatar1.webp" alt="mountaincycling1">
+                    <img src="../Images/saudi-arabia.webp" alt="mountaincycling2">
                     <!-- <img src="..\assets\mountaincycling3.jpg" alt="mountaincycling3"> -->
                 </div>
             </div>
@@ -224,8 +224,8 @@
                     </ul>
                     </p>
                 <div class="images">
-                    <img src="..//images/messi.webp" alt="skydive1">
-                    <img src="..//images/messi2.jpg" alt="skydive2">
+                    <img src="../Images/messi.webp" alt="skydive1">
+                    <img src="../Images/messi2.jpg" alt="skydive2">
                     <!-- <img src="..\assets\skydive3.jpg" alt="skydive3"> -->
                 </div>
             </div>
